--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
   <body>
     <main>
       <div class="input-section">
-        <label for="day">DAY</label>
-        <input type="number" name="day" id="day" />
-        <p class="date-error">This field is required</p>
-        <label for="month">MONTH</label>
-        <input type="number" id="month" />
-        <p class="month-error">This field is required</p>
-        <label for="year">YEAR</label>
-        <input type="number" name="year" id="year" />
-        <p class="year-error">This field is required</p>
+        <div class="section">
+          <label for="day">DAY</label>
+          <input type="number" name="day" id="day" />
+          <p class="date-error">This field is required</p>
+        </div>
+        <div class="section">
+          <label for="month">MONTH</label>
+          <input type="number" id="month" />
+          <p class="month-error">This field is required</p>
+        </div>
+        <div class="section">
+          <label for="year">YEAR</label>
+          <input type="number" name="year" id="year" />
+          <p class="year-error">This field is required</p>
+        </div>
       </div>
       <div class="button-section">
         <div class="first-line"></div>
