--- a/index.html
+++ b/index.html
@@ -8,34 +8,23 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <main>
-      <div class="input-section">
-        <div class="section">
+    <main class="container">
+      <div class="inputs">
+        <div class="date">
           <label for="day">DAY</label>
-          <input type="number" name="day" id="day" />
-          <p class="date-error">This field is required</p>
+          <input type="number" id="day" />
         </div>
-        <div class="section">
+        <div class="month">
           <label for="month">MONTH</label>
           <input type="number" id="month" />
-          <p class="month-error">This field is required</p>
         </div>
-        <div class="section">
+        <div class="year">
           <label for="year">YEAR</label>
-          <input type="number" name="year" id="year" />
-          <p class="year-error">This field is required</p>
+          <input type="number" id="year" />
         </div>
       </div>
-      <div class="button-section">
-        <div class="first-line"></div>
-        <button><img src="./assets/images/icon-arrow.svg" alt="" /></button>
-        <div class="second-line"></div>
-      </div>
-      <div class="results-section">
-        <p class="years-result"><span>38</span> years</p>
-        <p class="months-result"><span>3</span> months</p>
-        <p class="date-result"><span>26</span> days</p>
-      </div>
+      <div class="button-line"></div>
+      <div class="results"></div>
     </main>
   </body>
 </html>
