--- a/index.html
+++ b/index.html
@@ -12,19 +12,38 @@
       <div class="inputs">
         <div class="date">
           <label for="day">DAY</label>
-          <input type="number" id="day" />
+          <input data-day-input type="number" id="day" />
         </div>
         <div class="month">
           <label for="month">MONTH</label>
-          <input type="number" id="month" />
+          <input data-month-input type="number" id="month" />
         </div>
         <div class="year">
           <label for="year">YEAR</label>
-          <input type="number" id="year" />
+          <input data-year-input type="number" id="year" />
         </div>
       </div>
-      <div class="button-line"></div>
-      <div class="results"></div>
+      <div class="button-line">
+        <button data-submit>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="46"
+            height="44"
+            viewBox="0 0 46 44"
+          >
+            <g fill="none" stroke="#FFF" stroke-width="2">
+              <path
+                d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44"
+              />
+            </g>
+          </svg>
+        </button>
+      </div>
+      <div class="results">
+        <p><span data-year-result>--</span> years</p>
+        <p><span data-month-result>--</span> months</p>
+        <p><span data-day-result>--</span> days</p>
+      </div>
     </main>
   </body>
 </html>
