--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
           <input data-day-input type="number" id="day" />
         </div>
         <div class="month">
-          <label for="month">MONTH</label>
-          <input data-month-input type="number" id="month" />
+          <label for="monthData">MONTH</label>
+          <input data-month-input type="number" id="monthData" />
         </div>
         <div class="year">
-          <label for="year">YEAR</label>
-          <input data-year-input type="number" id="year" />
+          <label for="yearData">YEAR</label>
+          <input data-year-input type="number" id="yearData" />
         </div>
       </div>
       <div class="button-line">
