starting js from start

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
         <div class="date">
           <label for="day">DAY</label>
           <input data-day-input type="number" id="day" />
+          <p data-date-error class="error"></p>
         </div>
         <div class="month">
           <label for="monthData">MONTH</label>
           <input data-month-input type="number" id="monthData" />
+          <p data-month-error class="error"></p>
         </div>
         <div class="year">
           <label for="yearData">YEAR</label>
           <input data-year-input type="number" id="yearData" />
+          <p data-year-error class="error"></p>
         </div>
       </div>
       <div class="button-line">
