--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div class="line1"></div>
         <button data-submit>
           <svg
+            class="svg"
             xmlns="http://www.w3.org/2000/svg"
             width="46"
             height="44"
@@ -60,6 +61,5 @@
         <p><span data-day-result>--</span> days</p>
       </div>
     </main>
-    <div id="counter"></div>
   </body>
 </html>
